add ticker data model and CRUD operations; update requirements and Docker configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-fastapi
-prisma
-uvicorn
-pydantic
-asyncpg
-pandas
-unittest
+fastapi==0.103.1
+uvicorn==0.23.2
+pydantic==2.3.0
+sqlalchemy==2.0.20
+psycopg2-binary==2.9.7
+pandas==2.1.0
+numpy==1.25.2
+python-dotenv==1.0.0
+pytest==7.4.2
+httpx==0.24.1
+coverage==7.3.1
